--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "class-list",
+  "name": "css-class-list",
   "version": "0.0.1",
   "description": "ClassList Dom like Class ",
   "main": "dist/index.umd.js",
